--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,17 +17,6 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="textEmailAddress"
-        android:layout_centerInParent="true"
-        android:padding="5dp"
-        android:background="#ffffff"
-        android:id="@+id/editText"
-        android:layout_marginTop="10dp"
-        android:hint="Email" />
-
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:inputType="textPassword"
         android:padding="5dp"
 
@@ -62,4 +51,17 @@
 
         android:layout_centerInParent="true"
         />
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="textEmailAddress"
+        android:padding="5dp"
+        android:background="#ffffff"
+        android:id="@+id/editText"
+        android:hint="Email"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="84dp" />
 </RelativeLayout>
